--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: '基于多模态的视频标签化系统'
+site_name: 'Stephen带你重做短视频大厂直播间的对话情感分析'
 site_url: 'https://www.tisv.cn/'
 # site_description: 'AI Tutorials'
 repo_url: 'https://github.com/AITutorials/datasets'
